    README.Debian, extend explanation. (closes: #579932)
  * add comment to crypttab manpage about how to disable (pre)checks.
    (closes: #574948)
  * fix cryptdisks.functions to print cryptsource and crypttarget again at
    the passphrase prompt. (closes: #578428)
  * reorder build-depends, add pkg-config, change automake1.9 to automake

 -- Jonas Meurer <mejo@debian.org>  Mon, 03 May 2010 15:40:59 +0200

cryptsetup (2:1.1.0-2.1) unstable; urgency=low

  * Non-maintainer upload.

  [ Martin Pitt ]
   * debian/initramfs/cryptroot-script: (closes: #576488)
     - Source /scripts/functions after checking for prerequisites.
     - prereqs(): Do not assume we are running within initramfs, and calculate
       relative path correctly.

 -- maximilian attems <maks@debian.org>  Thu, 08 Apr 2010 01:37:17 +0200

cryptsetup (2:1.1.0-2) unstable; urgency=low

  * fix version in NEWS.Debian: 2:1.1.0~rc2-1 instead of 2:1.0.7-3.
  * remove 'NOT RELEASED YET' from 2:1.1.0-1 changelog
  * capitalize names in changelog
  * mention the old default plain mode in changelog and NEWS, add a note that
    debian-installer setups can ignore the warning, and warn for plain dm-crypt
    mappings in crypttab that don't have set cipher, hash and size.
    (closes: #573103, #573261)

 -- Jonas Meurer <mejo@debian.org>  Tue, 16 Mar 2010 13:44:50 +0100

cryptsetup (2:1.1.0-1) unstable; urgency=low

  * new upstream stable release (1.1.0), notable changes since rc2:
    - default key size for LUKS changed from 128 to 256 bits
    - default plain mode changed from aes-cbc-plain to aes-cbc-essiv:sha256
    - key slot and key diggest iteration minimum set to 1000
    - convert hash name to lower case in header
  * update patch 02_manpage
  * add more supported filesystems to passdev.c, isofs->iso9660. thanks to
    Christoph Anton Mitterer. (closes: #557405)
  * update to standards-version 3.8.4, no changes needed
  * accept spaces in $opts at postinst script. (closes: #559184)