@@ -3,7 +3,7 @@ Section: admin
 Priority: optional
 Maintainer: Debian Cryptsetup Team <pkg-cryptsetup-devel@lists.alioth.debian.org>
 Uploaders: Jonas Meurer <mejo@debian.org>
-Build-Depends: libgcrypt11-dev, libdevmapper-dev (>= 2:1.02.24-4), libpopt-dev, uuid-dev, libselinux1-dev, libsepol1-dev, libtool (>= 2.2), autoconf, automake, pkg-config, autopoint, gettext, debhelper (>= 6.0.7~), quilt (>= 0.40), xsltproc, docbook-xml, docbook-xsl (>= 1.74.3+dfsg)
+Build-Depends: libgcrypt11-dev, libdevmapper-dev (>= 2:1.02.24-4), libpopt-dev, uuid-dev, libselinux1-dev, libsepol1-dev, libtool (>= 2.2), autoconf, automake, pkg-config, autopoint, gettext, debhelper (>= 6.0.7~), xsltproc, docbook-xml, docbook-xsl (>= 1.74.3+dfsg)
 Standards-Version: 3.8.4
 Homepage: http://code.google.com/p/cryptsetup/
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-cryptsetup/cryptsetup/trunk
@@ -56,7 +56,7 @@ Description: libcryptsetup shared library
 Package: libcryptsetup-dev
 Section: libdevel
 Architecture: any
-Depends: libcryptsetup1 (= ${binary:Version})
+Depends: ${misc:Depends}, libcryptsetup1 (= ${binary:Version})
 Description: libcryptsetup development files
  Cryptsetup provides a command-line interface for configuring encrypted
  devices. This is done using the Linux kernel device mapper target
